--- a/PixBee_P4_MultiCopter.ioc
+++ b/PixBee_P4_MultiCopter.ioc
@@ -25,17 +25,18 @@ Mcu.CPN=STM32F732RET6
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DMA
-Mcu.IP10=USART2
-Mcu.IP11=USART3
+Mcu.IP10=UART4
+Mcu.IP11=USART2
+Mcu.IP12=USART3
 Mcu.IP2=I2C2
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
 Mcu.IP6=TIM1
-Mcu.IP7=TIM8
-Mcu.IP8=TIM12
-Mcu.IP9=UART4
-Mcu.IPNb=12
+Mcu.IP7=TIM5
+Mcu.IP8=TIM8
+Mcu.IP9=TIM12
+Mcu.IPNb=13
 Mcu.Name=STM32F732RETx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH1-OSC_OUT
@@ -56,6 +57,7 @@ Mcu.Pin21=PA14
 Mcu.Pin22=PC10
 Mcu.Pin23=PC11
 Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin25=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
 Mcu.Pin5=PC4
@@ -63,7 +65,7 @@ Mcu.Pin6=PB0
 Mcu.Pin7=PB1
 Mcu.Pin8=PB10
 Mcu.Pin9=PB11
-Mcu.PinsNb=25
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F732RETx
@@ -112,6 +114,8 @@ PA9.Locked=true
 PA9.Signal=S_TIM1_CH2
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=ICM20948_IT
 PB1.Locked=true
 PB1.Signal=GPXTI1
 PB10.Mode=I2C
@@ -145,7 +149,7 @@ ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -255,6 +259,8 @@ TIM12.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM12.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period
 TIM12.Period=2500
 TIM12.Prescaler=215
+TIM5.IPParameters=Prescaler
+TIM5.Prescaler=107
 TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
@@ -270,5 +276,7 @@ USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=custom
 isbadioc=false
