--- a/PixBee_P4_MultiCopter.ioc
+++ b/PixBee_P4_MultiCopter.ioc
@@ -17,7 +17,6 @@ Dma.USART2_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART2_RX.0.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
-GPIO.groupedBy=Group By Peripherals
 I2C2.I2C_Speed_Mode=I2C_Fast
 I2C2.IPParameters=Timing,I2C_Speed_Mode
 I2C2.Timing=0x6000030D
@@ -75,7 +74,6 @@ MxDb.Version=DB.6.0.111
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -165,7 +163,7 @@ ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=STM32CubeIDE
+ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=PixBee_P4_MultiCopter.ioc
 ProjectManager.ProjectName=PixBee_P4_MultiCopter
