--- a/PixBee_P4_MultiCopter.ioc
+++ b/PixBee_P4_MultiCopter.ioc
@@ -36,9 +36,10 @@ Mcu.CPN=STM32F732RET6
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DMA
-Mcu.IP10=UART4
-Mcu.IP11=USART2
-Mcu.IP12=USART3
+Mcu.IP10=TIM14
+Mcu.IP11=UART4
+Mcu.IP12=USART2
+Mcu.IP13=USART3
 Mcu.IP2=I2C2
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -47,7 +48,7 @@ Mcu.IP6=TIM1
 Mcu.IP7=TIM5
 Mcu.IP8=TIM8
 Mcu.IP9=TIM12
-Mcu.IPNb=13
+Mcu.IPNb=14
 Mcu.Name=STM32F732RETx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH1-OSC_OUT
@@ -69,6 +70,8 @@ Mcu.Pin22=PC10
 Mcu.Pin23=PC11
 Mcu.Pin24=VP_SYS_VS_Systick
 Mcu.Pin25=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin26=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM14_VS_no_output1
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
 Mcu.Pin5=PC4
@@ -76,7 +79,7 @@ Mcu.Pin6=PB0
 Mcu.Pin7=PB1
 Mcu.Pin8=PB10
 Mcu.Pin9=PB11
-Mcu.PinsNb=26
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F732RETx
@@ -86,7 +89,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream3_IRQn=true\:15\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.EXTI1_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI1_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -95,7 +98,9 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
+NVIC.UART4_IRQn=true\:14\:0\:true\:false\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:15\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
@@ -191,7 +196,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=scripts/afterGenarateCodeAction.sh
 ProjectManager.UAScriptBeforePath=scripts/befGenarateCodeAction.sh
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_UART4_Init-UART4-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_TIM8_Init-TIM8-false-HAL-true,9-MX_TIM12_Init-TIM12-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_TIM5_Init-TIM5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_UART4_Init-UART4-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_TIM8_Init-TIM8-false-HAL-true,9-MX_TIM12_Init-TIM12-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_TIM5_Init-TIM5-false-HAL-true,12-MX_TIM14_Init-TIM14-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
@@ -275,6 +280,11 @@ TIM12.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM12.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period
 TIM12.Period=2500
 TIM12.Prescaler=215
+TIM14.Channel=TIM_CHANNEL_1
+TIM14.IPParameters=Channel,Prescaler,Period,Pulse
+TIM14.Period=999
+TIM14.Prescaler=53999
+TIM14.Pulse=499
 TIM5.IPParameters=Prescaler
 TIM5.Prescaler=107
 TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
@@ -294,6 +304,10 @@ USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
+VP_TIM14_VS_no_output1.Mode=PWM Generation1 No Output
+VP_TIM14_VS_no_output1.Signal=TIM14_VS_no_output1
 VP_TIM5_VS_ClockSourceINT.Mode=Internal
 VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=custom
