--- a/PixBee_P4_MultiCopter.ioc
+++ b/PixBee_P4_MultiCopter.ioc
@@ -4,92 +4,104 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
-Dma.Request0=USART2_RX
-Dma.Request1=USART3_TX
+Dma.Request0=UART5_RX
+Dma.Request1=UART4_TX
 Dma.RequestsNb=2
-Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART2_RX.0.Instance=DMA1_Stream5
-Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART2_RX.0.Mode=DMA_NORMAL
-Dma.USART2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_RX.0.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART3_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART3_TX.1.Instance=DMA1_Stream3
-Dma.USART3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART3_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART3_TX.1.Mode=DMA_NORMAL
-Dma.USART3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART3_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.USART3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.UART4_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART4_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART4_TX.1.Instance=DMA1_Stream4
+Dma.UART4_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART4_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.UART4_TX.1.Mode=DMA_NORMAL
+Dma.UART4_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART4_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.UART4_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.UART4_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.UART5_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART5_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART5_RX.0.Instance=DMA1_Stream0
+Dma.UART5_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART5_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.UART5_RX.0.Mode=DMA_NORMAL
+Dma.UART5_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART5_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.UART5_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.UART5_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
-I2C2.I2C_Speed_Mode=I2C_Fast
-I2C2.IPParameters=Timing,I2C_Speed_Mode
-I2C2.Timing=0x6000030D
+I2C1.IPParameters=Timing
+I2C1.Timing=0x00808CD2
+I2C2.IPParameters=Timing
+I2C2.Timing=0x00808CD2
 KeepUserPlacement=false
 Mcu.CPN=STM32F732RET6
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DMA
-Mcu.IP10=TIM14
-Mcu.IP11=UART4
-Mcu.IP12=USART2
-Mcu.IP13=USART3
-Mcu.IP2=I2C2
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM1
-Mcu.IP7=TIM5
-Mcu.IP8=TIM8
-Mcu.IP9=TIM12
-Mcu.IPNb=14
+Mcu.IP10=TIM8
+Mcu.IP11=TIM12
+Mcu.IP12=TIM14
+Mcu.IP13=UART4
+Mcu.IP14=UART5
+Mcu.IP2=I2C1
+Mcu.IP3=I2C2
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM1
+Mcu.IP8=TIM3
+Mcu.IP9=TIM5
+Mcu.IPNb=15
 Mcu.Name=STM32F732RETx
 Mcu.Package=LQFP64
-Mcu.Pin0=PH1-OSC_OUT
-Mcu.Pin1=PA0-WKUP
-Mcu.Pin10=PB14
-Mcu.Pin11=PB15
-Mcu.Pin12=PC6
-Mcu.Pin13=PC7
-Mcu.Pin14=PC8
-Mcu.Pin15=PC9
-Mcu.Pin16=PA8
-Mcu.Pin17=PA9
-Mcu.Pin18=PA10
-Mcu.Pin19=PA11
-Mcu.Pin2=PA1
-Mcu.Pin20=PA13
-Mcu.Pin21=PA14
-Mcu.Pin22=PC10
-Mcu.Pin23=PC11
-Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin26=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM14_VS_no_output1
-Mcu.Pin3=PA2
-Mcu.Pin4=PA3
-Mcu.Pin5=PC4
-Mcu.Pin6=PB0
-Mcu.Pin7=PB1
-Mcu.Pin8=PB10
-Mcu.Pin9=PB11
-Mcu.PinsNb=28
+Mcu.Pin0=PH0-OSC_IN
+Mcu.Pin1=PH1-OSC_OUT
+Mcu.Pin10=PB2
+Mcu.Pin11=PB10
+Mcu.Pin12=PB11
+Mcu.Pin13=PB14
+Mcu.Pin14=PB15
+Mcu.Pin15=PC6
+Mcu.Pin16=PC7
+Mcu.Pin17=PC8
+Mcu.Pin18=PC9
+Mcu.Pin19=PA8
+Mcu.Pin2=PA0-WKUP
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
+Mcu.Pin24=PC10
+Mcu.Pin25=PC11
+Mcu.Pin26=PC12
+Mcu.Pin27=PD2
+Mcu.Pin28=PB3
+Mcu.Pin29=PB4
+Mcu.Pin3=PA1
+Mcu.Pin30=PB5
+Mcu.Pin31=PB8
+Mcu.Pin32=PB9
+Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM14_VS_no_output1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F732RETx
 MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Stream3_IRQn=true\:15\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream0_IRQn=true\:4\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.EXTI1_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI2_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -99,62 +111,76 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
-NVIC.UART4_IRQn=true\:14\:0\:true\:false\:true\:true\:true\:true
-NVIC.USART2_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
-NVIC.USART3_IRQn=true\:15\:0\:true\:false\:true\:true\:true\:true
+NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.UART5_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA0-WKUP.GPIOParameters=GPIO_Label
-PA0-WKUP.GPIO_Label=XBee_TX
 PA0-WKUP.Locked=true
-PA0-WKUP.Mode=Asynchronous
-PA0-WKUP.Signal=UART4_TX
-PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=XBee_RX
+PA0-WKUP.Signal=USART2_CTS
 PA1.Locked=true
-PA1.Mode=Asynchronous
-PA1.Signal=UART4_RX
+PA1.Signal=USART2_RTS
 PA10.Locked=true
 PA10.Signal=S_TIM1_CH3
-PA11.Locked=true
-PA11.Signal=S_TIM1_CH4
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.Mode=Asynchronous
+PA2.Locked=true
 PA2.Signal=USART2_TX
 PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA3.GPIO_Label=SBUS
 PA3.GPIO_PuPd=GPIO_PULLUP
 PA3.Locked=true
-PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA6.Locked=true
+PA6.Signal=S_TIM3_CH1
+PA7.Locked=true
+PA7.Signal=S_TIM3_CH2
 PA8.Locked=true
 PA8.Signal=S_TIM1_CH1
 PA9.Locked=true
 PA9.Signal=S_TIM1_CH2
 PB0.Locked=true
-PB0.Signal=GPIO_Output
-PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=ICM20948_IT
+PB0.Signal=S_TIM3_CH3
 PB1.Locked=true
-PB1.Signal=GPXTI1
+PB1.Signal=S_TIM3_CH4
+PB10.Locked=true
 PB10.Mode=I2C
 PB10.Signal=I2C2_SCL
+PB11.Locked=true
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=SERVO_1
 PB14.Locked=true
 PB14.Signal=S_TIM12_CH1
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=SERVO_2
 PB15.Locked=true
 PB15.Signal=S_TIM12_CH2
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=ICM20948_IT
+PB2.Locked=true
+PB2.Signal=GPXTI2
+PB3.Locked=true
+PB3.Signal=SPI1_SCK
+PB4.Locked=true
+PB4.Signal=SPI1_MISO
+PB5.Locked=true
+PB5.Signal=SPI1_MOSI
+PB8.Locked=true
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.Locked=true
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC10.Locked=true
 PC10.Mode=Asynchronous
-PC10.Signal=USART3_TX
+PC10.Signal=UART4_TX
 PC11.Locked=true
 PC11.Mode=Asynchronous
-PC11.Signal=USART3_RX
-PC4.Locked=true
-PC4.Signal=GPIO_Output
+PC11.Signal=UART4_RX
+PC12.Mode=Asynchronous
+PC12.Signal=UART5_TX
 PC6.Locked=true
 PC6.Signal=S_TIM8_CH1
 PC7.Locked=true
@@ -163,8 +189,13 @@ PC8.Locked=true
 PC8.Signal=S_TIM8_CH3
 PC9.Locked=true
 PC9.Signal=S_TIM8_CH4
+PD2.Locked=true
+PD2.Mode=Asynchronous
+PD2.Signal=UART5_RX
+PH0-OSC_IN.Locked=true
+PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Locked=true
-PH1-OSC_OUT.Signal=GPIO_Output
+PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -196,58 +227,62 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=scripts/afterGenarateCodeAction.sh
 ProjectManager.UAScriptBeforePath=scripts/befGenarateCodeAction.sh
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_UART4_Init-UART4-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_TIM8_Init-TIM8-false-HAL-true,9-MX_TIM12_Init-TIM12-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_TIM5_Init-TIM5-false-HAL-true,12-MX_TIM14_Init-TIM14-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
-RCC.AHBFreq_Value=216000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=54000000
-RCC.APB1TimFreq_Value=108000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_TIM14_Init-TIM14-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_UART4_Init-UART4-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_TIM12_Init-TIM12-false-HAL-true,13-MX_TIM1_Init-TIM1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
+RCC.AHBFreq_Value=72000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=36000000
+RCC.APB1TimFreq_Value=72000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=108000000
-RCC.APB2TimFreq_Value=216000000
-RCC.CortexFreq_Value=216000000
-RCC.FCLKCortexFreq_Value=216000000
+RCC.APB2Freq_Value=36000000
+RCC.APB2TimFreq_Value=72000000
+RCC.CortexFreq_Value=72000000
+RCC.FCLKCortexFreq_Value=72000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=216000000
+RCC.HCLKFreq_Value=72000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=54000000
-RCC.I2C2Freq_Value=54000000
-RCC.I2C3Freq_Value=54000000
+RCC.I2C1Freq_Value=36000000
+RCC.I2C2Freq_Value=36000000
+RCC.I2C3Freq_Value=36000000
 RCC.I2SFreq_Value=192000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.IPParameters=AHBCLKDivider,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLL48CLockSelection,PLLCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIP,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=216000000
-RCC.PLLCLKFreq_Value=216000000
+RCC.MCO2PinFreq_Value=144000000
+RCC.PLL48CLockSelection=RCC_CLK48SOURCE_PLLSAIP
+RCC.PLLCLKFreq_Value=144000000
 RCC.PLLI2SQCLKFreq_Value=192000000
 RCC.PLLI2SRCLKFreq_Value=192000000
 RCC.PLLI2SRoutputFreq_Value=192000000
 RCC.PLLM=8
-RCC.PLLN=216
-RCC.PLLQCLKFreq_Value=216000000
-RCC.PLLQoutputFreq_Value=216000000
-RCC.PLLSAIPCLKFreq_Value=192000000
+RCC.PLLN=144
+RCC.PLLQ=5
+RCC.PLLQCLKFreq_Value=57600000
+RCC.PLLQoutputFreq_Value=57600000
+RCC.PLLSAIP=RCC_PLLSAIP_DIV4
+RCC.PLLSAIPCLKFreq_Value=96000000
 RCC.PLLSAIQCLKFreq_Value=192000000
-RCC.PLLSAIoutputFreq_Value=192000000
-RCC.RNGFreq_Value=216000000
+RCC.PLLSAIoutputFreq_Value=96000000
+RCC.RNGFreq_Value=96000000
 RCC.SAI1Freq_Value=192000000
 RCC.SAI2Freq_Value=192000000
-RCC.SDMMCFreq_Value=216000000
-RCC.SYSCLKFreq_VALUE=216000000
+RCC.SDMMCFreq_Value=144000000
+RCC.SYSCLKFreq_VALUE=144000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.UART4Freq_Value=54000000
-RCC.UART5Freq_Value=54000000
-RCC.USART1Freq_Value=108000000
-RCC.USART2Freq_Value=54000000
-RCC.USART3Freq_Value=54000000
-RCC.USART6Freq_Value=108000000
-RCC.USBFreq_Value=216000000
+RCC.UART4Freq_Value=36000000
+RCC.UART5Freq_Value=36000000
+RCC.USART1Freq_Value=36000000
+RCC.USART2Freq_Value=36000000
+RCC.USART3Freq_Value=36000000
+RCC.USART6Freq_Value=36000000
+RCC.USBFreq_Value=96000000
 RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
-RCC.VCOOutputFreq_Value=432000000
+RCC.VCOOutputFreq_Value=288000000
 RCC.VCOSAIOutputFreq_Value=384000000
-SH.GPXTI1.0=GPIO_EXTI1
-SH.GPXTI1.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
 SH.S_TIM12_CH1.0=TIM12_CH1,PWM Generation1 CH1
 SH.S_TIM12_CH1.ConfNb=1
 SH.S_TIM12_CH2.0=TIM12_CH2,PWM Generation2 CH2
@@ -258,8 +293,14 @@ SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
 SH.S_TIM1_CH3.ConfNb=1
-SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
-SH.S_TIM1_CH4.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
+SH.S_TIM3_CH2.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
+SH.S_TIM3_CH3.ConfNb=1
+SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
+SH.S_TIM3_CH4.ConfNb=1
 SH.S_TIM8_CH1.0=TIM8_CH1,PWM Generation1 CH1
 SH.S_TIM8_CH1.ConfNb=1
 SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2
@@ -271,43 +312,49 @@ SH.S_TIM8_CH4.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period
-TIM1.Period=3599
-TIM1.Prescaler=19
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Prescaler,Period
+TIM1.Period=500
+TIM1.Prescaler=35999
 TIM12.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM12.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM12.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period
+TIM12.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Period,Prescaler
 TIM12.Period=2500
-TIM12.Prescaler=215
+TIM12.Prescaler=71
 TIM14.Channel=TIM_CHANNEL_1
 TIM14.IPParameters=Channel,Prescaler,Period,Pulse
 TIM14.Period=999
 TIM14.Prescaler=53999
 TIM14.Pulse=499
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM3.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
+TIM3.Period=3599
+TIM3.Prescaler=5
 TIM5.IPParameters=Prescaler
-TIM5.Prescaler=107
+TIM5.Prescaler=71
 TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM8.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period
 TIM8.Period=3599
-TIM8.Prescaler=19
-USART2.BaudRate=100000
-USART2.IPParameters=VirtualMode-Asynchronous,BaudRate,Parity,WordLength,StopBits
-USART2.Parity=PARITY_EVEN
-USART2.StopBits=STOPBITS_2
-USART2.VirtualMode-Asynchronous=VM_ASYNC
-USART2.WordLength=WORDLENGTH_9B
-USART3.IPParameters=VirtualMode-Asynchronous
-USART3.VirtualMode-Asynchronous=VM_ASYNC
+TIM8.Prescaler=5
+UART5.BaudRate=100000
+UART5.IPParameters=RxPinLevelInvertParam,BaudRate,WordLength,Parity,StopBits
+UART5.Parity=PARITY_EVEN
+UART5.RxPinLevelInvertParam=UART_ADVFEATURE_RXINV_ENABLE
+UART5.StopBits=UART_STOPBITS_2
+UART5.WordLength=WORDLENGTH_9B
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 VP_TIM14_VS_no_output1.Mode=PWM Generation1 No Output
 VP_TIM14_VS_no_output1.Signal=TIM14_VS_no_output1
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM5_VS_ClockSourceINT.Mode=Internal
 VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=custom
