--- a/PixBee_P4_MultiCopter.ioc
+++ b/PixBee_P4_MultiCopter.ioc
@@ -6,7 +6,8 @@ CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
 Dma.Request0=UART5_RX
 Dma.Request1=UART4_TX
-Dma.RequestsNb=2
+Dma.Request2=USART2_TX
+Dma.RequestsNb=3
 Dma.UART4_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.UART4_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.UART4_TX.1.Instance=DMA1_Stream4
@@ -27,6 +28,16 @@ Dma.UART5_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.UART5_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.UART5_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.UART5_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART2_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART2_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_TX.2.Instance=DMA1_Stream6
+Dma.USART2_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.USART2_TX.2.Mode=DMA_NORMAL
+Dma.USART2_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.USART2_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 I2C1.IPParameters=Timing
 I2C1.Timing=0x00808CD2
@@ -42,6 +53,7 @@ Mcu.IP11=TIM12
 Mcu.IP12=TIM14
 Mcu.IP13=UART4
 Mcu.IP14=UART5
+Mcu.IP15=USART2
 Mcu.IP2=I2C1
 Mcu.IP3=I2C2
 Mcu.IP4=NVIC
@@ -50,7 +62,7 @@ Mcu.IP6=SYS
 Mcu.IP7=TIM1
 Mcu.IP8=TIM3
 Mcu.IP9=TIM5
-Mcu.IPNb=15
+Mcu.IPNb=16
 Mcu.Name=STM32F732RETx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
@@ -100,6 +112,7 @@ MxDb.Version=DB.6.0.120
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:4\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI2_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -113,6 +126,7 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
 NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UART5_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=USART2_CTS
@@ -125,11 +139,13 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA2.Locked=true
+PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA3.GPIO_Label=SBUS
 PA3.GPIO_PuPd=GPIO_PULLUP
 PA3.Locked=true
+PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA6.Locked=true
 PA6.Signal=S_TIM3_CH1
@@ -227,7 +243,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=scripts/afterGenarateCodeAction.sh
 ProjectManager.UAScriptBeforePath=scripts/befGenarateCodeAction.sh
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_TIM14_Init-TIM14-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_UART4_Init-UART4-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_TIM12_Init-TIM12-false-HAL-true,13-MX_TIM1_Init-TIM1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_TIM14_Init-TIM14-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_UART4_Init-UART4-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_TIM12_Init-TIM12-false-HAL-true,13-MX_TIM1_Init-TIM1-false-HAL-true,14-MX_USART2_UART_Init-USART2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -347,6 +363,9 @@ UART5.Parity=PARITY_EVEN
 UART5.RxPinLevelInvertParam=UART_ADVFEATURE_RXINV_ENABLE
 UART5.StopBits=UART_STOPBITS_2
 UART5.WordLength=WORDLENGTH_9B
+USART2.BaudRate=19200
+USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
