--- a/PixBee_P4_MultiCopter.ioc
+++ b/PixBee_P4_MultiCopter.ioc
@@ -111,8 +111,8 @@ MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:4\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream4_IRQn=true\:15\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream6_IRQn=true\:15\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI2_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -122,9 +122,9 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.SysTick_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:false
 NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
-NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.UART4_IRQn=true\:15\:0\:true\:false\:true\:true\:true\:true
 NVIC.UART5_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
